# combinat

./: .envrc  .gitignore  CHANGES.md  combinat.opam  dune-project  flake.nix  index.html  odoc.css  shell.nix
combinat/: index.html
combinat/Combinat/: index.html
combinat/Combinat__/: index.html
combinat/Combinat__/Util/: index.html
combinat/Combinat__Util/: index.html
lib/: build.ml  combinat.ml  combinat.mli  combination.ml  composition.ml  dune  int_array.ml  partition.ml  permutation.ml  product.ml  sequence.ml  shared.ml  util.ml
test/: combination_test.ml  composition_test.ml  dune  partition_test.ml  permutation_test.ml  product_test.ml  sequence_test.ml  shared.ml
