opam-version: "1.2"
name: "combinat"
version: "1.0"
maintainer: "Jack Feser <feser@csail.mit.edu>"
authors: "Jack Feser <feser@csail.mit.edu>"
dev-repo: "git+https://github.com/jfeser/combinat.git"
homepage: "https://github.com/jfeser/combinat"
bug-reports: "https://github.com/jfeser/combinat/issues"
doc: "https://jfeser.github.io/combinat/"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {build & >= "1.1"}
  "base" {>= "v0.11" & < "v0.12"}
]
